# tree-sitter-mathprog

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mathprog.pc.in
bindings/c/tree_sitter/: tree-sitter-mathprog.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mathprog/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMathprogTests/: TreeSitterMathprogTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: check.txt  comment.txt  constraint.txt  data.txt  display.txt  for.txt  objective.txt  param.txt  printf.txt  set.txt  solve.txt  table.txt  var.txt
